# CS3110

./: .gitignore
Ch2/: hello.ml
Ch3/: algebraic_data_types.ml  association_list.ml  dune  ex.ml  exception.ml  record.ml
Ch3/Test/: test_sum.ml
Ch4/: README.md  curry.ml  dune  ex.ml  fold.ml  pipeline.ml  tree.ml  warmup.ml
Ch5/: adt.ml  dune  ex.ml  functor.ml  map.ml  queue.ml  ring.ml  set.ml  stack.ml  std_map.ml
Ch5/compl_unit/: mystack.ml  mystack.mli
Ch7/: arr.ml  dune  fact.ml  mlist.ml  ptr.ml  struct.ml
Ch8/: arr.ml  bst.ml  dune  ht.ml  laziness.ml  mem.ml  monad.ml  promise.ml  rbt.ml  seq.ml
L3/: dune  nat.ml  option.ml  pm.ml  tree.ml  tuple.ml  type_synonym.ml
L3/Test/: dune  sum.ml  test_day.ml
L4/: README.md  dune  filter.ml  map.ml
exercises/ex_02/: date_fun.ml  dune
