(executable
 (name adt)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name stack)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name queue)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name mymap)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name set)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name ring)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name functor)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name std_map)
 (flags
  (:standard -w -27-32-39)))

(executable
 (name ex)
 (flags
  (:standard -w -27-32-39)))
